# wii-organizer

./: .gitignore  .gitmodules  Cargo.toml
src/: covers.rs  game.rs  main.rs  menu.rs  utils.rs
